2011-02-16  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17422: cObj->FORM() wasn't processing the $formData parameter (Thanks to Hubertus Golf)

2011-02-16  Francois Suter  <francois.suter@typo3.org>

	* Cleanup #17513: Improve sys_note CSH file
	* Fixed bug #17385: Restore proper behavior of LOAD_REGISTER (Thanks to Jo Hasenau)

2011-02-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17587: htmlArea RTE: RTE should not be enabled on Android

2011-02-14  Steffen Gebert  <steffen.gebert@typo3.org>

	* Fixed bug #17564: Red question marks in QuickEdit instead of icons (Thanks to Jürgen Ettmueller)

2011-02-14  Georg Ringer <typo3@ringerge.org>

	* Fixed bug #16890: tcaTree in flexforms still breaks

2011-02-14  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #17541: cookies are not required in CLI mode / cookieSecure blocks cli

2011-02-13  Steffen Gebert  <steffen.gebert@typo3.org>

	* Added Test #17495: Add Unit Tests for t3lib_div::resolveBackPath()

2011-02-11  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17553: css_styled_content ext_tables.php links to wrong static file for TYPO3 4.4
	* Fixed bug #16534: Exception message for missing memcache wrong
	* Fixed bug #15721: Memcache::delete() without timeout param causes loss of memcache server in pool (Thanks to Michiel Ross)
	* Follow-up to #16591: Make getClassName() non recursive (Thanks to Pierre Dudoret)

2011-02-10  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #12230: Add unit test to test tslib_cObj::crop() for multibyte compatibility
	* Fixed bug #12230: Function tslib_cObj::crop() is not fully multibyte safe (Thanks to Vladimir Podkovanov)

2011-02-09  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17501: User setup - pressing return creates installtool file
	* Raised CodeMirror to version 0.9.3

2011-02-08  Steffen Kamper  <steffen@typo3.org>

	* Merged em from rev 4093
	* Fixed bug #15771: Docheader (save, save+view, save+close etc) missing